@@ -1,3 +1,9 @@
+2009-07-20  Richard Dale  <richard.j.dale@gmail.com>
+	* Make SmokeMarshallers.GetInstance() lock the pointerMap and fix bug 
+	  caused by trying to access 'IsAlive' on a null weakRef. This caused the 
+	  colliding mice example to crash on startup. Thanks to meebey from Debian
+	  for the fixes, and to pusling for telling me about them.
+
 2009-05-10  Arno Rehn  <arno@arnorehn.de>
 	* Add a QPair marshaller. We still need a List<QPair<...>> one.
 	* Fix some memory leaks.
